# E3SMQuickCompare

./: .pre-commit-config.yaml  CHANGELOG.md  launch.py  pyproject.toml  quickcompare-env.yml
.github/workflows/: package.yml  test.yml
docs/guides/: data.md
docs/setup/: for_app_developers.md  for_end_users.md
scripts/: README.md  generate_colorbar_cache.py  setup_tauri.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sidecar/: trame-x86_64-unknown-linux-gnu
src/e3sm_compareview/: __init__.py  app.py  comparison.py  pipeline.py  view_manager.py
src/e3sm_compareview/assets/: __init__.py
src/e3sm_compareview/components/: doc.py  drawer_utils.py  drawers.py  file_browser.py  simulation_selection.py  toolbars.py  view.py
src/e3sm_compareview/jupyter/: __init__.py  proxy.py
src/e3sm_quickview/: __init__.py  app.py  view_manager.py
src/e3sm_quickview/components/: doc.py  drawers.py  toolbars.py  tools.py  view.py
src/e3sm_quickview/jupyter/: __init__.py  proxy.py
src/e3sm_quickview/utils/: color.py
