[project]
name = "e3sm-compareview"
version = "1.3.1"
description = "An application to explore/analyze data for atmosphere component for E3SM"
authors = [
    {name = "Kitware Inc."},
]
readme = "README.md"
license = {text = "Apache Software License"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.10"

dependencies = [
    "numpy<2.4",
    "trame>=3.12",
    "trame-vtk>=2.10",
    "trame-vuetify>=3.1",
    "pyproj>=3.6.1",
    "netCDF4>=1.6.5",
    "trame-dataclass>=1.2",
    "trame-components",
    "trame-tauri>=0.6.2",
    "Pillow",
    "e3sm-quickview",
]

[project.optional-dependencies]
tauri = [
    "pyinstaller",
]
jupyter = [
    "jupyter-server-proxy>=4.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "/src/e3sm_compareview/**/*.py",
  "/src/e3sm_compareview/data/**",
  "/src/e3sm_compareview/assets/**",
  "/src/e3sm_compareview/jupyter/**",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/e3sm_compareview",
]

[project.scripts]
compareview = "e3sm_compareview.app:main"
quickcompare = "e3sm_compareview.app:main"

[project.entry-points."jupyter_serverproxy_servers"]
compareview = "e3sm_compareview.jupyter:setup_compareview"
quickcompare = "e3sm_compareview.jupyter:setup_quickcompare"

[tool.ruff.lint.per-file-ignores]
"e3sm_compareview/pipeline.py" = ["F821"]  # Plugin classes loaded dynamically

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "src-tauri/Cargo.toml:package.version",
]
version_variables = [
    "src/e3sm_compareview/__init__.py:__version__",
    "src-tauri/tauri.conf.json:version",
]
build_command = """
  python -m venv .venv
  source .venv/bin/activate
  pip install -U pip build
  python -m build .
"""

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
